display min and max

--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -73,14 +73,14 @@
 
   <div class="row">
 
-
-
-    <!-- Liste des catégories -->
-
-
     <div class="column">
       <div id="course">
         <b>Quelle altitude pour la prochaine rando ?</b>
+      </div>
+
+      <div id="stats">
+        L'élévation max : <span id="maxEle"></span> m <br />
+        L'élévation min : <span id="minEle"></span> m
       </div>
 
       <!-- Slider -->
