--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -84,6 +84,11 @@
       </div>
 
       <!-- Slider -->
+      Sommets compris entre
+      <input type="text" id="inputMinEle" maxlength="4" size="4" placeholder="min" />
+      et
+      <input type="text" id="inputMaxEle" maxlength="4" size="4" placeholder="max" />
+
 
       <div class="range_container">
         <div class="sliders_control">
