--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -79,32 +79,28 @@
       </div>
 
       <div id="stats">
-        L'élévation max : <span id="maxEle"></span> m <br />
-        L'élévation min : <span id="minEle"></span> m
+        élévation max : <span id="maxEle"></span> m <br />
+        élévation min : <span id="minEle"></span> m
       </div>
 
       <!-- Slider -->
-      Sommets compris entre
-      <input type="text" id="inputMinEle" maxlength="4" size="4" placeholder="min" />
-      et
-      <input type="text" id="inputMaxEle" maxlength="4" size="4" placeholder="max" />
-
-
       <div class="range_container">
+
         <div class="sliders_control">
-          <input id="fromSlider" type="range" value="10" min="0" max="9000" />
-          <input id="toSlider" type="range" value="2000" min="0" max="9000" />
+          <input id="fromSlider" type="range" value="0" min="0" max="3000" />
+          <input id="toSlider" type="range" value="3000" min="1" max="3000" />
         </div>
+
         <div class="form_control">
           <div class="form_control_container">
             <div class="form_control_container__time">Min</div>
-            <input class="form_control_container__time__input" type="number" id="fromInput" value="10" min="0"
-              max="9000" />
+            <input class="form_control_container__time__input" type="number" id="fromInput" maxlength="4" size="50"
+              placeholder="min" />
           </div>
           <div class="form_control_container">
             <div class="form_control_container__time">Max</div>
-            <input class="form_control_container__time__input" type="number" id="toInput" value="2000" min="0"
-              max="9000" />
+            <input class="form_control_container__time__input" type="number" id="toInput" maxlength="4" size="5"
+              placeholder="max" />
           </div>
         </div>
       </div>
