add button show min/max peaks : zoom + bindpopup

--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -79,8 +79,10 @@
       </div>
 
       <div id="stats">
-        élévation max : <span id="maxEle"></span> m <br />
+        élévation max : <span id="maxEle"></span> m
+        <button class="button-show" type="button" onclick="showMaxPeak()"> Show </button> <br />
         élévation min : <span id="minEle"></span> m
+        <button class="button-show" type="button" onclick="showMinPeak()"> Show </button>
       </div>
 
       <!-- Slider -->
