find min and max longitudes

--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -109,6 +109,22 @@
           </div>
         </div>
       </div>
+
+
+      <!-- Slider -->
+      <div class="range_container">
+
+        <div class="form_control">
+          <div class="form_control_container">
+            <input class="form_control_container__time__input" type="number" id="fromX" placeholder="mon long x" />
+            <div class="form_control_container__time">Min x</div>
+          </div>
+          <div class="form_control_container">
+            <input class="form_control_container__time__input" type="number" id="toX" placeholder="max long x" />
+            <div class="form_control_container__time">Max x</div>
+          </div>
+        </div>
+      </div>
     </div>
 
 
